--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5485,7 +5485,7 @@ body.dark-mode #darkModeToggle.dark i::before {
     background: var(--nav-panel-bg-color);
     box-shadow: none;
     color: var(--nav-panel-text-color);
-    height: 100vh;
+    height: 100%;
     max-width: 80%;
     overflow-y: auto;
     padding: 3rem 2rem 0; /* Top padding to make room for close button */
