Adjusted js for recaptcha on cashlinks.html.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ input, select, textarea {
     --code-border-color: #eeeeee;
     --box-border-color: #eeeeee;
 	--button-color: #a1a1a1;
-    --button-border-color: #a1a1a1;
+    --button-border-color: #eeeeee;
     --button-hover-border-color: #7019c7;
     --button-primary-bg-color: #212931;
     --button-primary-hover-bg-color: #7019c7;
