--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -513,12 +513,12 @@ header.header-subpage {
 
 	h2 {
 		font-size: 1.75rem;
-		margin: 0 0 1.5rem 0;
+		margin: 0 0 2rem 0;
 	}
 
 	h3 {
 		font-size: 1.25rem;
-		margin: 1.5rem 0 1.5rem 0;
+		margin: 0 0 1.5rem 0;
 	}
 
 	h4 {
@@ -4503,8 +4503,13 @@ section.livestream {
 }
 
 /* Quick Start Section */
+
+.quick-start-title {
+    margin-top: 1.5rem;
+}
+
 #main .quick-start-section {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
 }
 
 #main .quick-start-section .button {
