Fixed some allignment issues and added socials banners.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3390,7 +3390,7 @@ section {
 
 			header.major > p {
 				margin-top: 0;
-				margin-bottom: 0;
+				margin-bottom: 1.5rem;
 				text-align: center;
 			}
 
