--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5299,6 +5299,7 @@ article.community.featured {
 			#footer > section.split.contact > section > :last-child {
 				flex-shrink: 1;
 				flex-grow: 1;
+				margin: 0;
 			}
 			
 			#footer > section.split.contact > section:first-child {
@@ -5875,6 +5876,43 @@ body.dark-mode #darkModeToggle.dark i::before {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 768px) {
+	.stream.video.main {
+        width: 100%;
+        height: 0; /* Reset height to allow padding to define the aspect ratio */
+        padding-bottom: 56%; /* Your specific aspect ratio */
+        margin: 0rem auto 2rem auto;
+        position: relative;
+        overflow: hidden; /* Ensure content doesn't spill outside */
+    }
+
+	@media screen and (max-width: 768px) {
+		.stream.video.main .twitter-tweet {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			max-width: 100vw; /* Full viewport width on mobile */
+			max-height: none; /* Allow content to define height */
+			z-index: 10;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%) scale(1); /* Scale down if necessary for fit */
+			/* Add this to center text or other content inside the tweet */
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+	}
+    
+    .stream.video.main .twitter-tweet iframe {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover; /* This ensures the iframe content covers the area */
+    }
 }
 
 @media screen and (max-width: 980px) {
